[tool.poetry]
name = "python-repo"
version = "0.1.0"
description = ""
authors = ["fitzypop <fitzypop@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
devtools = "^0.8.0"
pydantic = "^1.9.0"
bson = "^0.5.10"
requests = "^2.31.0"
PySimpleGUI = "^4.57.0"
orjson = "^3.7.1"
SQLAlchemy = "^1.4.39"
aiohttp = "^3.9.2"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
asyncmock = "^0.4.2"
flask = "^2.3.2"
matplotlib = "^3.8.3"
psutil = "^5.9.8"

[tool.poetry.dev-dependencies]
black = "^24.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.237"
black = "^24.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
